syntax = "proto3";

package notification;

option go_package = "notification/";

// Notification Service definition
service NotificationService {
    rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

// Request to send a notification
message SendNotificationRequest {
    uint64 user_id = 1;     // User ID to send the notification to
    string message = 2;     // The notification message
}

// Response for sending a notification
message SendNotificationResponse {
    bool success = 1;       // Whether the notification was sent successfully
}